@@ -4,6 +4,15 @@
 
 	2005-04-18  Sven de Marothy  <sven@physto.se>
 
+        * java/io/InputStreamReader.java:
+        (read): Fix several bugs leading to incorrect length being returned.
+
+2005-04-23  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath:
+
+	2005-04-18  Sven de Marothy  <sven@physto.se>
+
         * java/nio/ByteBufferImpl.java:
         (putChar): Inlined for speed.
         (put, get): Bulk methods can use arraycopy.
